--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,8 +10,11 @@ leptos_meta.workspace = true
 tracing.workspace = true
 bevy.workspace = true
 leptos_router = {"version" = "0.6", features = ["nightly"]}
+leptos_axum = { version = "0.6", optional = true }
+http.workspace = true
+thiserror.workspace = true
 
 [features]
 default = []
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
-ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
+ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
