--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-app = {path = "../app", default-features = false, features = ["ssr"]}
+app = {path = "../app", default-features = false, features = ["ssr","hydrate"]}
 leptos = {workspace = true, features = ['ssr']}
 async-bevy-web = {workspace = true, features = []}
 bevy.workspace = true
